--- a/Makefile.in
+++ b/Makefile.in
@@ -256,7 +256,7 @@ EXTRA_DIST = \
  autogen.sh \
  m4/missing-dev-prog.sh
 
-SUBDIRS = drmaa_utils lsf_drmaa doc
+SUBDIRS = drmaa_utils lsf_drmaa
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
